--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.room:room-ktx:2.4.0-rc01'
     kapt 'androidx.room:room-compiler:2.4.0-rc01'
+    implementation 'androidx.room:room-paging:2.4.2'
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 }
