--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.room:room-ktx:2.4.0-rc01'
